# event-driven-mini-ec

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py
app/application/: exceptions.py
app/application/dto/: __init__.py  models.py
app/application/ports/: __init__.py  publisher.py  repositories.py  uow.py
app/application/use_cases/: __init__.py  adjust_inventory.py  admin_events.py  create_order.py  create_shipment.py  get_inventory.py  get_order.py  projections.py  reserve_inventory.py
app/domain/: __init__.py
app/domain/events/: __init__.py  models.py
app/domain/inventory/: __init__.py  models.py
app/domain/orders/: __init__.py  models.py
app/domain/shipping/: __init__.py  models.py
app/infrastructure/db/: models.py  session.py  uow.py
app/infrastructure/outbox/: __init__.py  relay.py
app/infrastructure/redis/: __init__.py  consumer.py  publisher.py
app/infrastructure/repositories/: sqlalchemy_repositories.py
app/infrastructure/toxiproxy/: __init__.py  client.py
app/interfaces/api/: main.py  schemas.py
app/interfaces/static/: __init__.py  app.js  index.html  styles.css
app/interfaces/workers/: runner.py
scripts/: toxiproxy.json
tests/fault/: test_fault_scenarios.py
tests/integration/: test_postgres_outbox.py
tests/unit/application/: __init__.py  fakes.py  test_create_order.py  test_inventory_and_shipping_flow.py  test_projection.py
tests/unit/domain/: __init__.py  test_inventory.py  test_orders.py  test_shipping.py
